[project]
name = "tungo-examples"
version = "1.0.0"
description = "TunGo SDK Python Examples"
requires-python = ">=3.8"

dependencies = [
    "tungo-sdk",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "flask>=3.0.0",
]

[tool.uv]
dev-dependencies = []
package = false

[tool.uv.sources]
tungo-sdk = { path = "..", editable = true }
